<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_a_friend"
            android:icon="@drawable/add_a_friend"
            android:title="@string/add_a_friend" />
        <item
            android:id="@+id/groups"
            android:icon="@drawable/groups"
            android:title="@string/groups" />
        <item
            android:id="@+id/previous_wars"
            android:icon="@drawable/trophy_award"
            android:title="@string/previous_wars" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:title="@string/logout_button" />
        </menu>
    </item>

</menu>
